[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "koala-flow"
version = "0.1.3"
description = "A lightweight ML orchestration framework for batch inference using dlt and Narwhals."
readme = "README.md"
authors = [
    { name = "Glenn Dalida", email = "dalidaglenno6452@gmail.com" }
]
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/godalida/koala-flow"
Repository = "https://github.com/godalida/koala-flow"
Issues = "https://github.com/godalida/koala-flow/issues"
Documentation = "https://github.com/godalida/koala-flow/blob/main/README.md"
dependencies = [
    "dlt>=0.4.0",
    "narwhals>=1.0.0",
    "pandas>=2.0.0",  # Default backend, but users can use Polars
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy"
]
xgboost = ["xgboost"]
polars = ["polars"]

[tool.hatch.build.targets.wheel]
packages = ["src/koala_flow"]
